sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:2: error: Missing closing brace `}' assumed here
var Int i=0
^AlgBubbleSort2:3: error: expected class or object definition
var Int j=0
^AlgBubbleSort2:4: error: expected class or object definition
def bubbleSort2() {
^